[package]
name = "dry_sql"
version = "0.1.3"
edition = "2021"
authors = [ "Muhammad R Kahfi" ]
description = "CLI tool to dry-run your SQL scripts"
readme = "./README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap =  { version = "4.5.4", features = ["derive"] }
console = "0.15.8"
indicatif = "0.17.8"
tokio = { version = "1.37.0", features = ["full"] }
tokio-postgres = "0.7.10"
